# Lab_Info2_2025_2

./: .gitignore  README.md
Examen Diagnostico/: Promedios.txt  exam.py  ventas.txt
Lab_1/: CMakeLists.txt  Doxyfile  README.md  main.cpp  mainpage.dox
Lab_1/.cache/clangd/index/: main.cpp.063C9868F27AE7C8.idx
Lab_2/: CMakeLists.txt  Doxyfile  README.md  main.cpp  mainpage.dox
Lab_2/Teclado/: platformio.ini
Lab_2/Teclado/src/: main.cpp
Lab_3/3.1/: CMakeLists.txt
Lab_3/3.1/include/: app.hpp  binary_numbers.hpp  cypher.hpp  cypher_decypher.hpp
Lab_3/3.1/src/: CMakeLists.txt  app.cpp  binary_numbers.cpp  cypher_decypher.cpp  main.cpp  test.txt  users.txt
Lab_3/3.2/: CMakeLists.txt
Lab_3/3.2/include/: app.hpp  app_atm.hpp  binary_numbers.hpp
Lab_3/3.2/src/: CMakeLists.txt  app.cpp  app_atm.cpp  cypher.cpp  main.cpp
Lab_4/: CMakeLists.txt
Lab_4/include/: app.hpp  network.hpp  router.hpp
Lab_4/src/: CMakeLists.txt  app.cpp  main.cpp  network.cpp  router.cpp
Lab_5/: CMakeLists.txt
Lab_5/include/: Logger.hpp  Obstacle.hpp  Particle.hpp  Simulation.hpp  Vector2.hpp
Lab_5/src/: CMakeLists.txt  Logger.cpp  Obstacle.cpp  Particle.cpp  Simulation.cpp  Vector2.cpp  main.cpp
