cmake_minimum_required(VERSION 3.16)

project(Lab_1 LANGUAGES CXX)

set(CMAKE_CXX_STANDAR 17)
set(CMAKE_CXX_STANDAR_REQUIRED ON)

add_executable(Lab_1 main.cpp)

include(GNUInstallDirs)
install(TARGETS Lab_1
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
